Footer alignment fix

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -69,7 +69,7 @@ body{
   color: yellow;
   position: fixed; /* Fixed/sticky position */
   bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
+  right: 20px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
@@ -174,6 +174,10 @@ body{
 
 .footer-body{
     height: 30%;
+}
+
+.footerCols{
+    text-align: center;
 }
 /***** footer section *****/
 
